@@ -1,0 +1,40 @@
+<!DOCTYPE html>
+<script src="../js/resources/js-test-pre.js"></script>
+<script>
+description('Non-relevant properties on mutation records should be null');
+var observer = new WebKitMutationObserver(function() {});
+
+var text = document.createTextNode('something');
+observer.observe(text, {characterData: true});
+text.data = 'something else';
+var record = observer.takeRecords()[0];
+debug('characterData record:');
+shouldBeNull('record.attributeName');
+shouldBeNull('record.attributeNamespace');
+shouldBeNull('record.oldValue');
+shouldBeNull('record.addedNodes');
+shouldBeNull('record.removedNodes');
+shouldBeNull('record.previousSibling');
+shouldBeNull('record.nextSibling');
+
+var div = document.createElement('div');
+observer.observe(div, {childList: true});
+div.appendChild(document.createElement('span'));
+record = observer.takeRecords()[0];
+debug('\nchildList record:');
+shouldBeNull('record.attributeName');
+shouldBeNull('record.attributeNamespace');
+shouldBeNull('record.oldValue');
+
+observer.observe(div, {attributes: true});
+div.setAttribute('data-foo', 'bar');
+record = observer.takeRecords()[0];
+debug('\nattributes record:');
+shouldBeNull('record.attributeNamespace');
+shouldBeNull('record.oldValue');
+shouldBeNull('record.addedNodes');
+shouldBeNull('record.removedNodes');
+shouldBeNull('record.previousSibling');
+shouldBeNull('record.nextSibling');
+</script>
+<script src="../js/resources/js-test-post.js"></script>
