@@ -1,3 +1,14 @@
+2012-10-04  Adam Klein  <adamk@chromium.org>
+
+        MutationRecord attributeName should be null for non attribute changes
+        https://bugs.webkit.org/show_bug.cgi?id=98438
+
+        Reviewed by Ojan Vafai.
+
+        Test: fast/mutation/mutation-record-nullity.html
+
+        * dom/MutationRecord.idl:
+
 2012-10-04  Simon Fraser  <simon.fraser@apple.com>
 
         Final part of "sync" to "flush" renaming
